src/objects/Skill_Types__c.object
<CustomObject>
    <description>Used for the automatic assignment of cases in SCE. Developed by Salesforce Professional Services.</description>
    <fields>
        <fullName>Case_Location__c</fullName>
        <label>Case Location</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa &amp; Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia &amp; Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China &amp; North Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_Weight__c</fullName>
        <label>Skill Weight</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Skill Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Location__c</columns>
        <columns>Skill_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>